# seventh

./: .gitignore  pyproject.toml
docs/: console.html  howmade.html  index.html  robots.txt  search.json  sitemap.xml  wikipedia.html
notebooks/: README.md  _quarto.yml  console.ipynb  index.qmd  settings.ini  wikipedia.ipynb
notebooks/_freeze/: _quarto.yml  console.ipynb  howmade.qmd  nbdev.yml  settings.ini  sidebar.yml  wikipedia.ipynb
seventh/: console.py  wikipedia.py
tests/: test_console.py  test_wikipedia.py
