[project]
name = "seventh"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "Rahul Dave", email = "rahuldave@gmail.com" }]
requires-python = ">= 3.10"
dependencies = []

[project.optional-dependencies]
test = ["coverage[toml]"]
docs = ["nbdev"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["seventh"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.tasks]
program = "python seventh/console.py"

[tool.pixi.dependencies]
pixi-kernel = ">=0.3.0,<0.4"
python = "*"
click = ">=8.1.7,<8.2"
requests = ">=2.31.0,<2.32"
pydantic = ">=2.7.1,<2.8"

[tool.pixi.pypi-dependencies]
seventh = { path = ".", editable = true }

[tool.pixi.feature.test.dependencies]
pytest = ">=7.2.0,<8.3"
pytest-cov = ">=5.0.0,<5.1"
pytest-mock = ">=3.14.0,<3.15"

[tool.pixi.feature.test.tasks]
test = "pytest --cov -m 'not e2e'"
teste2e = "pytest --cov -m 'e2e'"

[tool.pixi.feature.lintformat.tasks]
lint = "ruff check"
format = "ruff format"

[tool.pixi.feature.typing.tasks]
typing = "mypy ."

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.docs.dependencies]
quarto = ">=1.4.550,<1.5"
jupyterlab = ">=4.2.0,<4.3"

[tool.pixi.feature.typing.dependencies]
mypy = ">=0.812,<1.11"
pydantic = ">=2.7.1,<2.8"

[tool.pixi.feature.lintformat.dependencies]
ruff = ">=0.4.4,<0.5"
pre-commit = ">=3.7.1,<3.8"

# Environments
[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
dev = { features = [
    "test",
    "lintformat",
    "typing",
    "docs",
], solve-group = "default" }
py310 = { features = ["py310"], solve-group = "py310" }
py311 = { features = ["py311"], solve-group = "py311" }
py310dev = { features = [
    "py310",
    "test",
    "lintformat",
    "typing",
    "docs",
], solve-group = "py310" }
py311dev = { features = [
    "py311",
    "test",
    "lintformat",
    "typing",
    "docs",
], solve-group = "py311" }
py310test = { features = ["py310", "test"], solve-group = "py310" }
py311test = { features = ["py311", "test"], solve-group = "py311" }

[tool.coverage.paths]
source = ["seventh"]
[tool.coverage.run]
branch = true
source = ["seventh"]
[tool.coverage.report]
show_missing = true

[tool.ruff.lint]
ignore = [
    "E203",   # whitespace before ':'
    "S101",   # use of assert detected, ignore for test-suite
    "ANN401",
]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # McCabe
    "C",
    # # pyupgrade
    # "UP",
    # # flake8-bugbear
    "B",
    # flake8-bandit
    "S",
    # # flake8-simplify
    # "SIM",
    # isort
    "I",
    "ANN",
]
mccabe.max-complexity = 10

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = true

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["requests", "pytest"]
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".pixi/envs/dev"
